chore: format code

--- a/src/notebooks/scatter_agents.ipynb
+++ b/src/notebooks/scatter_agents.ipynb
@@ -1407,29 +1407,37 @@
     "from celluloid import Camera\n",
     "\n",
     "camera = Camera(plt.figure())\n",
-    "for i in range(len(df_rewards)-200,len(df_rewards)):\n",
+    "for i in range(len(df_rewards) - 200, len(df_rewards)):\n",
     "    x = df_coordinates[x_coord].loc[i]\n",
     "    y = df_coordinates[y_coord].loc[i]\n",
     "    r = df_rewards[reward_cols].loc[i]\n",
     "\n",
-    "    x_pred, y_pred, r_pred = (\n",
-    "        x[:num_predators],\n",
-    "        y[:num_predators],\n",
-    "        r[:num_predators]\n",
-    "    )\n",
-    "    x_prey, y_prey, r_prey = (\n",
-    "        x[num_predators:],\n",
-    "        y[num_predators:],\n",
-    "        r[num_predators:]\n",
-    "    )\n",
+    "    x_pred, y_pred, r_pred = (x[:num_predators], y[:num_predators], r[:num_predators])\n",
+    "    x_prey, y_prey, r_prey = (x[num_predators:], y[num_predators:], r[num_predators:])\n",
     "\n",
-    "    plt.scatter(x_pred, y_pred, c=[red_cmap(int((r + 1000) / 10)) for r in r_pred], s=200 * np.pi, marker=\"o\")\n",
+    "    plt.scatter(\n",
+    "        x_pred,\n",
+    "        y_pred,\n",
+    "        c=[red_cmap(int((r + 1000) / 10)) for r in r_pred],\n",
+    "        s=200 * np.pi,\n",
+    "        marker=\"o\",\n",
+    "    )\n",
     "    for i in range(len(x_pred)):\n",
-    "       plt.text(x_pred[i] + 0.1, y_pred[i], round((r_pred[i] + 1000), 2), fontsize=12)  # Offset x[i] for better readability\n",
+    "        plt.text(\n",
+    "            x_pred[i] + 0.1, y_pred[i], round((r_pred[i] + 1000), 2), fontsize=12\n",
+    "        )  # Offset x[i] for better readability\n",
     "    #\n",
-    "    plt.scatter(x_prey, y_prey, c=[blue_cmap(int((r + 1000) / 10)) for r in r_prey], s=200 * np.pi, marker=\"o\")\n",
+    "    plt.scatter(\n",
+    "        x_prey,\n",
+    "        y_prey,\n",
+    "        c=[blue_cmap(int((r + 1000) / 10)) for r in r_prey],\n",
+    "        s=200 * np.pi,\n",
+    "        marker=\"o\",\n",
+    "    )\n",
     "    for i in range(len(x_prey)):\n",
-    "       plt.text(x_prey[i] + 0.1, y_prey[i], round((r_prey[i] + 1000), 2), fontsize=12)  # Offset x[i] for better readability\n",
+    "        plt.text(\n",
+    "            x_prey[i] + 0.1, y_prey[i], round((r_prey[i] + 1000), 2), fontsize=12\n",
+    "        )  # Offset x[i] for better readability\n",
     "\n",
     "    camera.snap()\n",
     "anim = camera.animate(blit=True)\n",
